<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/capturedImage"
        android:layout_width="match_parent"
        android:layout_height="500dp" />

    <LinearLayout
        android:layout_centerHorizontal="true"
        android:layout_below="@id/capturedImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <Button
            android:layout_width="wrap_content"
            android:text="@string/undo"
            android:id="@+id/undo"
            android:layout_marginEnd="5dp"
            android:textSize="11sp"
            android:layout_height="wrap_content"/>

        <Button
            android:id="@+id/rotate"
            android:layout_width="wrap_content"
            android:text="@string/rotate"
            android:textSize="11sp"
            android:layout_marginEnd="5dp"
            android:layout_height="wrap_content"/>

        <Button
            android:id="@+id/crop"
            android:layout_width="wrap_content"
            android:text="@string/crop"
            android:textSize="11sp"
            android:layout_marginEnd="5dp"
            android:layout_height="wrap_content"/>

        <Button
            android:id="@+id/save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save"
            android:textSize="11sp" />
    </LinearLayout>
</RelativeLayout>