<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.camera.view.PreviewView
        android:id="@+id/previewView"
        android:layout_height="550dp"
        android:layout_width="match_parent"/>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="550dp"
        android:visibility="gone" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="550dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/bCapture"
            android:layout_marginEnd="10dp"
            android:textSize="11sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/take_picture" />

        <Button
            android:id="@+id/restart_camera"
            android:layout_marginEnd="10dp"
            android:textSize="11sp"
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/restart_camera" />

        <Button
            android:id="@+id/uploadFromGallery"
            android:textSize="11sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/upload_from_gallery" />

    </LinearLayout>
</RelativeLayout>